Generalized `Request` and `Response`
Now `Request` and `Response` stand for web requests and responses of all
protocols, rather than specifically for HTTP.