@@ -1,19 +1,21 @@
 package com.mrdai.crawly.examples.bing;
 
 import com.mrdai.crawly.network.Request;
+import com.mrdai.crawly.network.http.HttpRequest;
 import com.mrdai.crawly.util.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 
 /**
  * {@link Request} for searching keyword in {@code http://cn.bing.com}.
  */
-public class BingSearchRequest extends Request {
+public class BingSearchRequest extends HttpRequest {
     private static final Logger LOG = LoggerFactory.getLogger(BingSearchRequest.class);
     private static final String urlPrefix = "http://cn.bing.com/search?q=";
+
+    private final URI requestTarget;
 
     /**
      * Creates a Bing search request with the given keywords.
@@ -21,11 +23,13 @@ public class BingSearchRequest extends Request {
      * @param keywords the given keywords.
      */
     public BingSearchRequest(String... keywords) {
+        super(null);
         String realUrl = urlPrefix + StringUtils.concatStrings(keywords, "+");
-        try {
-            targetUrl = new URL(realUrl);
-        } catch (MalformedURLException e) {
-            LOG.error("Failed to instantiate Request with url " + realUrl);
-        }
+        requestTarget = URI.create(realUrl);
+    }
+
+    @Override
+    public URI getRequestTarget() {
+        return requestTarget;
     }
 }
